--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Upload Release Artifacts
 
 on:
@@ -12,6 +9,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v3
 
@@ -22,32 +21,28 @@ jobs:
 
     - name: Build
       run: |
-        GOOS=windows go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samparser_${{github.ref_name}}_windows_amd64.exe"
-        GOOS=darwin go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samparser_${{github.ref_name}}_macOS_amd64"
-        GOOS=linux go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samparser_${{github.ref_name}}_linux_amd64"
+        GOOS=windows go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samdump_${{github.ref_name}}_windows_amd64.exe"
+        GOOS=darwin go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samdump_${{github.ref_name}}_macOS_amd64"
+        GOOS=linux go build -ldflags "-s -w -X main.version=${{github.ref_name}}" -o "samdump_${{github.ref_name}}_linux_amd64"
 
-    - name: Create Release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+    - name: Create a Release
+      uses: elgohr/Github-Release-Action@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      with:
+        title: Release ${{ github.ref }}
     
     - name: Create zip files
-        run: |
-          zip samparser_${{github.ref_name}}_windows_amd64{.zip,}
-          zip samparser_${{github.ref_name}}_macOS_amd64{.zip,}
-          zip samparser_${{github.ref_name}}_linux_amd64{.zip,}
-
+      run: |
+        zip samdump_${{github.ref_name}}_windows_amd64.zip samdump_${{github.ref_name}}_windows_amd64.exe
+        zip samdump_${{github.ref_name}}_macOS_amd64.zip samdump_${{github.ref_name}}_macOS_amd64
+        zip samdump_${{github.ref_name}}_linux_amd64.zip samdump_${{github.ref_name}}_linux_amd64
 
     - name: Release artifacts
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          samparser_${{github.ref_name}}_windows_amd64.zip
-          samparser_${{github.ref_name}}_macOS_amd64.zip
-          samparser_${{github.ref_name}}_linux_amd64.zip
+          samdump_${{github.ref_name}}_windows_amd64.zip
+          samdump_${{github.ref_name}}_macOS_amd64.zip
+          samdump_${{github.ref_name}}_linux_amd64.zip
